<resources>
    <string name="app_name">SplitTheBill</string>
    <string name="nome">Nome</string>
    <string name="pagou">0.00</string>
    <string name="salvar">Salvar</string>
    <string name="remover_integrante">Remover integrante</string>
    <string name="editar_integrante">Editar integrante</string>
    <string name="adicionar_integrante">Adicionar integrante</string>
    <string name="rachar_conta">Rachar conta</string>
    <string name="comprou">Itens\nque\ncomprou</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="itens">Itens</string>
</resources>