<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
    <TextView
        android:id="@+id/nomeTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/pagouTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pagou"/>

    <TextView
        android:id="@+id/itensCompradosTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/itens"/>

</LinearLayout>